# Py

./: LICENSE  README.md  environment.yml  main.py
Learning_Syntax/: .gitignore  BankingProgram.py  ConcessionStand.py  FormatSpecifiers.py  Match_Case_Statements.py  MembershipOperators.py  OOP.py  RockPaperSci.py  ShoppingCart.py  SlotMachine.py  StringIndexing.py  TwoDcollections.py  UserInputExer.py  _ArgsKwargs.py  arithmetic.py  calculator.py  circleExercise.py  collection_ListSetTuple.py  compoundInterestCalculator.py  conditionalExprx.py  countdownTimer.py  defaultArguments.py  dice.py  dictionary.py  encryptionProgram.py  forLoops.py  fprint.py  functions.py  hangman.py  ifStatements.py  if__main__demo.py  input_function.py  iterables.py  keywordArguments.py  list_comprehensions.py  logicalOperators.py  mathLibraryExer.py  nestedLoops.py  numberGuessingGame.py  quizGame.py  (+6 more)
Learning_Syntax/Module/: example.py  modulePT2.py  modules.py
Learning_Syntax/OOP/: car.py  classVariables.py  inheritance.py  pyObjectOrientedProgramming.py
Learning_Syntax/SCRIPT/: script1.py  script2.py
Learning_Syntax/cli/: README.md  pyproject.toml  setup.py
Learning_Syntax/cli/eve/: .eve.yaml  cli.py  config.py
Learning_Syntax/hangman_game/: hangman.py  wordsList.py
Learning_Syntax/testingPackages/: __init__.py  apples.py  oranges.py  packages.md  pears.py
